<resources>
    <string name="app_name">Budget</string>
    <string name="delete">Delete</string>
    <string name="add_category">Add Category</string>
    <string name="Categories">Categories</string>
    <string name="update">Update</string>
    <string name="new_category_layout">The Category is in use. \nMove items to:</string>
    <string name="sub_category_layout">Add a standalone category or a sub category?:</string>
    <string name="new_category">New category</string>
    <string name="existing_category">Existing category</string>
    <string name="standalone_category">A standalone category</string>
    <string name="sub_category">A sub category of:</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="category_avrage">Average:  %1$s</string>
  <!--  <string name="monthly_total">Entire month total</string>-->
    <string name="category_total">Total:  %1$s</string>
    <string name="total_sum">total</string>
    <string name="pie_chart_choice">Monthly expenses</string>
    <string name="bar_chart_choice">All expenses</string>
    <string name="no_charts_data">I\'m sorry...\nThere are no expenses, thus...\nno statistics for you.</string>
    <string name="radio_categories">Categories</string>
    <string name="radio_subcategories">Sub categories</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="add_expense">Add expense</string>
</resources>
