<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/add_category_form_layout"
        android:orientation="vertical"
        android:layout_width="260dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/category_layout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/category_txt"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textSize="8pt"
                android:text="@string/category"/>

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="120dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/amount_layout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/amount_txt"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textSize="8pt"
                android:text="@string/amount"/>

            <EditText
                android:id="@+id/amount_edit"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:ems="10"
                android:layout_gravity="center"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/description_layout"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/description_txt"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textSize="8pt"
                android:text="@string/description"/>

            <EditText
                android:id="@+id/description_edit"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="textPersonName"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_marginStart="25dp"
        android:layout_width="100dp"
        android:layout_height="40dp"
        style="?android:attr/buttonBarButtonStyle"/>
</LinearLayout>